force-app/main/default/objects/AuditTrail__c/fields/AdditionalMetadata__c.field-meta.xml
<CustomField>
    <fullName>AdditionalMetadata__c</fullName>
    <label>AdditionalMetadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>