force-app/main/default/objects/AuditTrail__c/fields/ClientIPAddress__c.field-meta.xml
<CustomField>
    <fullName>ClientIPAddress__c</fullName>
    <label>ClientIPAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>