force-app/main/default/objects/AuditTrail__c/fields/DeviceType__c.field-meta.xml
<CustomField>
    <fullName>DeviceType__c</fullName>
    <label>DeviceType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>