force-app/main/default/objects/AuditTrail__c/fields/LocationCity__c.field-meta.xml
<CustomField>
    <fullName>LocationCity__c</fullName>
    <label>LocationCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>