force-app/main/default/objects/AuditTrail__c/fields/LocationCountry__c.field-meta.xml
<CustomField>
    <fullName>LocationCountry__c</fullName>
    <label>LocationCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>