force-app/main/default/objects/AuditTrail__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AuditTrails2</relationshipName>
    <type>Lookup</type>
</CustomField>